# tap-klaviyo

./: README.md  pyproject.toml
tap_klaviyo/: client.py  paginator.py  streams.py  tap.py
tap_klaviyo/schemas/: events.json  flows.json  lists.json  metrics.json  profiles.json  segments.json
